[package]
name = "sawp"
version = "0.1.0"
authors = ["ay <ankit.yadav@compass.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
select = "0.4.3"
rayon = { version = "*" }
rust-bert = "0.12.0"

